added profile info to settings

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -135,6 +135,9 @@
                 Your Profile
             </h1>
             <h2>Name</h2>
+            <p id="settingsusrname"></p>
+            <h2>Profile Picture</h2>
+            <img style="border-radius: 100000px;" id="settingsuserpfp" src="" alt="">
             <br />
             <br />
             <br />
