add logout function

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -318,7 +318,7 @@
               <div class="dropdown-item" onclick="window.location.href='countdowndashboard'">
                 <i class="fa-solid fa-border-all"></i> Dashboard
               </div>
-              <div class="dropdown-item dropdown-warning">
+              <div class="dropdown-item dropdown-warning" onclick="logoutUser();">
                 <i class="fa-solid fa-right-from-bracket"></i> Log Out
               </div>
             </div>
