--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -296,7 +296,7 @@
             <div id="previewiframecontainer">
                 <p class="preview-label">Preview:</p>
                 <div class="iframe-aspect-wrapper">
-                  <iframe frameborder="0" allowfullscreen id="previewiframe"></iframe>
+                  <iframe style="cursor:pointer; user-select: none;" onclick="settings(); SetCountDowngeneral();" frameborder="0" allowfullscreen id="previewiframe"></iframe>
                 </div>
               </div>
         </div>
