--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -309,9 +309,6 @@
     </div>
         <div class="dropdown-container" style="position:fixed; left:25px; bottom:290px; z-index: 1000001;" id="accountDropdown">
             <div class="dropdown-menu" id="accountMenu">
-              <div class="dropdown-item" onclick="renameUser();">
-                <i class="fa-solid fa-pencil"></i> Rename
-              </div>
               <div class="dropdown-item" onclick="openPersonalSettings();">
                 <i class="fa-solid fa-user"></i> Settings
               </div>
@@ -603,7 +600,7 @@
     <p style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; margin-top:150px;">Countdown is a free service provided by <a class="aintext" style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; text-decoration: underline;" href="https://michaeldors.com/">michaeldors.com</a>.</p>
     <p class="textelement" style="max-width:100%;">
         <a class="aintext dependencieslink" style="margin-left:0px" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
-        <a class="aintext dependencieslink" href="docs#cookiepolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Policy</a>
+        <a class="aintext dependencieslink" href="docs#privacypolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-lock"></i> Policy</a>
         <a class="aintext dependencieslink" href="Information/dependencies" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
         <a class="aintext dependencieslink" href="docs" target="_blank" rel="noopener noreferrer" style="margin-bottom:100px;"><i style="margin-right:10px" class="fa-solid fa-book"></i> Docs</a>
     </p>
