--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Docs</title>
+    <title>Minutehand Docs</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Dosis:wght@600&display=swap" rel="stylesheet">
@@ -12,10 +12,10 @@
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <meta name="theme-color" content="#8426ff" />
     <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg" />
-    <meta property="og:title" content="Countdown Documentation - Michael Dors" />
+    <meta property="og:title" content="Minutehand Documentation - Michael Dors" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://michaeldors.com/mcacountdown/docs" />
-    <meta property="og:description" content="Documentation for Countdown" />
+    <meta property="og:description" content="Documentation for Minutehand" />
     <meta property="og:site_name" content="Michael Dors" />
     <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
     <style>
@@ -488,16 +488,16 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
         <ul id="sidebar-links">
             <!-- Buttons will be generated automatically by JavaScript -->
         </ul>
-        <p onclick="window.location.href = 'http://605958.xyz'" id="returnbutton"><i class="fa-solid fa-chevron-left"></i> Back to Countdown</p>
+        <p onclick="window.location.href = 'http://605958.xyz'" id="returnbutton"><i class="fa-solid fa-chevron-left"></i> Back to Minutehand</p>
     </div>
     <div class="content">
         <div id="home" class="section active">
-            <h1>Welcome to Countdown Docs</h1>
-            <p>We strive to create things that are easy to use, but also robust. This website was created to help elaborate on our more complex features, and help you to understand how Countdown works.</p>
+            <h1>Welcome to Minutehand Docs</h1>
+            <p>We strive to create things that are easy to use, but also robust. This website was created to help elaborate on our more complex features, and help you to understand how Minutehand works.</p>
         </div>
         <div id="export-cal-to-schedule" class="section">
             <h1>Export Calendars to Schedule</h1>
-            <p>Export calendars from Google, iCloud, and Outlook to Countdown.</p>
+            <p>Export calendars from Google, iCloud, and Outlook to Minutehand.</p>
             <h2>Google Calendar</h2>
             <p class="warning"><i class="fa-solid fa-triangle-exclamation"></i> You cannot, as of now, export calendars from the Google Calendar app. You must use the desktop website.</p>
             <p>To export from Google Calendar, follow these steps:</p>
@@ -506,7 +506,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
                 <li>Select Settings</li>
                 <li>Choose the calendar you want to export from the menu, under "Settings for my calendars"</li>
                 <li>Under that calendar's options, pick "Export calendar"</li>
-                <li>You should now have a .ics file that Countdown can use to make your schedule!</li>
+                <li>You should now have a .ics file that Minutehand can use to make your schedule!</li>
             </ol>
             <h2>iCloud/MacOS Calendar</h2>
             <p>To export from iCloud/MacOS Calendar, follow these steps:</p>
@@ -515,7 +515,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
                 <li>Select the calendar from the calendar list</li>
                 <p class="warning"><i class="fa-solid fa-triangle-exclamation"></i> If your calendar list is hidden, go to View > Show Calendar List</p>
                 <li>Select your save location, and click Export</li>
-                <li>Your .ics file should now be saved to your selected save location, ready for Countdown to make your schedule with</li>
+                <li>Your .ics file should now be saved to your selected save location, ready for Minutehand to make your schedule with</li>
             </ol>
             <h2>Outlook Calendar</h2>
                 <p>To export from Outlook Calendar, follow these steps:</p>
@@ -524,66 +524,69 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
                     <li>Click File, and Save Calendar</li>
                     <li>You will be given options regarding name and date range, select as you see fit</li>
                     <li>Click OK, and Save</li>
-                    <li>Your .ics file should now be saved, ready for Countdown to make a schedule with</li>
+                    <li>Your .ics file should now be saved, ready for Minutehand to make a schedule with</li>
                 </ol>
         </div>
         <div id="timekeeper" class="section">
             <h1>What Is Timekeeper?</h1>
-            <p>Learn about Countdown's intelligent features and how you can use them to save precious time</p>
+            <p>Learn about Minutehand's intelligent features and how you can use them to save precious time</p>
             <h2>What features make up Timekeeper?</h2>
-            <p>Timekeeper features can be found across Countdown, mainly making it easy to set up your Countdown</p>
+            <p>Timekeeper features can be found across Minutehand, mainly making it easy to set up your countdown</p>
             <ol>
-                <li>When creating a Countdown, you'll see the <i class="fa-solid fa-compass"></i> Timekeeper bar at the bottom of the screen, suggesting the next upcoming event or guiding you to pick your own date</li>
+                <li>When creating a countdown, you'll see the <i class="fa-solid fa-compass"></i> Timekeeper bar at the bottom of the screen, suggesting the next upcoming event or guiding you to pick your own date</li>
                 <li>Similarly, in the Options menu, you can use the <i class="fa-solid fa-business-time"></i> Second Sense date preset to find the next upcoming holiday or event</li>
-                <li>The <i class="fa-solid fa-wand-magic-sparkles"></i> Magic Title button will automatically name your Countdown if it detects a related date</li>
+                <li>The <i class="fa-solid fa-wand-magic-sparkles"></i> Magic Title button will automatically name your countdown if it detects a related date</li>
             </ol>
             <p>Although Timekeeper aims to be smart, these features do not use generative AI models. They're just smart features that you can rely on.</p>
         </div>
         <div id="dashboard" class="section">
             <h1>How Dashboard Works</h1>
-            <p>Although there are multiple methods of saving or sharing Countdowns, they can be simplified down to sharing a copy, or saving locally</p>
-            <p>Countdown Dashboard saves your Countdowns locally, on your device, and allows you to save any changes you make</p>
+            <p>Although there are multiple methods of saving or sharing countdowns, they can be simplified down to sharing a copy, or saving locally</p>
+            <p>Dashboard saves your countdowns locally, on your device, and allows you to save any changes you make</p>
             <h2>How Do I Save To Dashboard?</h2>
-            <p>Saving your Countdown to Dashboard is simple. From the options menu, click the <i class="fa-solid fa-star"></i> Save button. You should see a toast in the top right telling you it successfully saved. If you've already saved the Countdown, the button may say Saved or Update.</p>
+            <p>Saving your countdown to Dashboard is simple. From the options menu, click the <i class="fa-solid fa-star"></i> Save button. You should see a toast in the top right telling you it successfully saved. If you've already saved the countdown, the button may say Saved or Update.</p>
             <h2>How to Update Countdowns</h2>
-            <p>If you've saved a Countdown to your Dashboard, but have made changes since, it's easy to save the new changes to your Dashboard. Simply open Options, and click the same button as you did when initially saving it. If there have been changes made compared to the version in Dashboard, it should say Update. If you change the Title of the Countdown, it is no longer the same Countdown and needs to be resaved.</p>
+            <p>If you've saved a countdown to your Dashboard, but have made changes since, it's easy to save the new changes to your Dashboard. Simply open Options, and click the same button as you did when initially saving it. If there have been changes made compared to the version in Dashboard, it should say Update. If you change the Title of the countdown, it is no longer the same countdown and needs to be resaved.</p>
             <h2>What is a Local Shortcut?</h2>
-            <p>When you copy a regular Countdown link, it always points to the exact version you copied. Any changes you make later aren't reflected in that link.</p>
-            <p>Local Shortcuts work differently by letting you link to a Countdown stored in your dashboard. Instead of linking to a fixed URL, they always point to the most up-to-date version you've saved.</p>
+            <p>When you copy a regular countdown link, it always points to the exact version you copied. Any changes you make later aren't reflected in that link.</p>
+            <p>Local Shortcuts work differently by letting you link to a countdown stored in your dashboard. Instead of linking to a fixed URL, they always point to the most up-to-date version you've saved.</p>
             <p>This means you don't have to worry about re-bookmarking or copying a new link when you make changes.</p>
             <h2>I Don't See My Local Shortcut, Where Is It?</h2>
-            <p>Local Shortcuts appear in the Ease of Use section of Personal Options. They only show up once you have saved your Countdown to Dashboard.</p>
+            <p>Local Shortcuts appear in the Ease of Use section of Personal Options. They only show up once you have saved your countdown to Dashboard.</p>
         </div>
         <div id="sharing" class="section">
             <h1>How to Share Countdowns</h1>
-            <p>Although there are multiple methods of saving or sharing Countdowns, they can be simplified down to sharing a copy, or saving locally</p>
-            <p>Sharing your Countdown is simple. Here's how:</p>
+            <p>Although there are multiple methods of saving or sharing countdowns, they can be simplified down to sharing a copy, or saving locally</p>
+            <p>Sharing your countdown is simple. Here's how:</p>
             <h2>What Gets Shared?</h2>
-            <p>Countdown's options are divided into two distinct categories- Shareable Options and Personal Options.</p>
-            <p>Shareable options are just how they sound, they get shared in the link. They include the date, title, colors or background, typeface, confetti options, ending sound and progress bar of the Countdown. Additionally, if it's a Countdown Schedule, your entire Schedule will be stored in the link.</p>
+            <p>Minutehand's options are divided into two distinct categories- Shareable Options and Personal Options.</p>
+            <p>Shareable options are just how they sound, they get shared in the link. They include the date, title, colors or background, typeface, confetti options, ending sound and progress bar of the countdown. Additionally, if it's a countdown schedule, your entire schedule will be stored in the link.</p>
             <p>Personal options store options that are only for you. You can read more about them on the 'The Difference Between Shareable and Personal Options' support doc. These options will not be shared in the link.</p>
-            <p class="warning"><i class="fa-solid fa-triangle-exclamation"></i> Always be cautious when sharing personal information. If you put personal information in your Countdown, the link will still contain that information.</p>
+            <p class="warning"><i class="fa-solid fa-triangle-exclamation"></i> Always be cautious when sharing personal information. If you put personal information in your countdown, the link will still contain that information.</p>
             <h2>Sharing a Link</h2>
-            <p>You can send anyone a link to your Countdown, which can be found in your General Options. There is a Copy Link button to the right of the link, allowing you to simply copy the link to your clipboard.</p>
-            <p>When you copy a link to a Countdown, it will always point to the version you linked. Any changes you make later won't be reflected in that link, unlike in Local Shortcuts (a feature of Countdown Dashboard).</p>
+            <p>You can send anyone a link to your countdown, which can be found in your General Options. There is a Copy Link button to the right of the link, allowing you to simply copy the link to your clipboard.</p>
+            <p>When you copy a link to a countdown, it will always point to the version you linked. Any changes you make later won't be reflected in that link, unlike in Local Shortcuts (a feature of Minutehand Dashboard).</p>
             <h2>Sharing a QR Code</h2>
-            <p>Countdown will automatically generate a QR Code for your Countdown. You can find this below the link for your Countdown, in the General Options.</p>
+            <p>Minutehand will automatically generate a QR Code for your countdown. You can find this below the link for your countdown, in the General Options.</p>
             <p>There is also a download button, allowing you to share or save this QR Code elsewhere.</p>
             <p>The QR Code goes to the same destination as the link above.</p>
         </div>
         <div id="personalvshareable" class="section">
             <h1>The Difference Between Shareable and Personal Options</h1>
-            <p>Countdown's options are divided into two distinct categories- Shareable Options and Personal Options.</p>
+            <p>Minutehand's options are divided into two distinct categories- Shareable Options and Personal Options.</p>
             <h2>What are Shareable Options?</h2>
-            <p>Shareable options are just how they sound, they get shared in the link. They include the date, title, colors or background, typeface, confetti options, ending sound and progress bar of the Countdown. Additionally, if it's a Countdown Schedule, your entire Schedule will be stored in the link.</p>
+            <p>Shareable options are just how they sound, they get shared in the link. They include the date, title, colors or background, typeface, confetti options, ending sound and progress bar of the countdown. Additionally, if it's a countdown schedule, your entire schedule will be stored in the link.</p>
             <h2>What are Personal Options?</h2>
-            <p>Personal options store options that are only for you. They include accessibility and ease of use options that allow users to make Countdowns to work better for them.</p>
-            <p>For that reason, Personal options cannot be shared in a link, as they are designed to accommodate a user, not a Countdown. Instead, they're stored as cookies in the browser. This way, they're applied across all Countdowns.</p>
+            <p>Personal options store options that are only for you. They include accessibility and ease of use options that allow users to make countdowns to work better for them.</p>
+            <p>For that reason, Personal options cannot be shared in a link, as they are designed to accommodate a user, not a countdown. Instead, they're stored as cookies in the browser. This way, they're applied across all countdowns.</p>
             <p>Personal options include animation speed, labeling time units, disabling confetti, disabling ending sounds, saving memory when inactive, increasing contrast, and only including certain time units.</p>
         </div>
-        <div id="cookiepolicy" class="section">
+        <div id="privacypolicy" class="section">
+            <h1>Privacy Policy</h1>
+            <p></p>
+            <br>
             <h1>Cookie Policy</h1>
-            <p>Countdown utilizes cookies and other similar technologies to enhance your experience and improve the website's functionality. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here's how we use them:</p>
+            <p>Minutehand utilizes cookies and other similar technologies to enhance your experience and improve the website's functionality. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here's how we use them:</p>
             <h2>Use of Cookies</h2>
             <p>We utilize cookies to save your accessibility settings and other personal options, which are only stored when enabled and deleted when disabled. Additionally, other local storage technologies are used to store more save data, such as Dashboards.</p>
             <h2>Cookie Duration</h2>
@@ -597,9 +600,9 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
         </div>
         <div id="foregroundvbackground" class="section">
             <h1>Foreground Color or Backgrounds</h1>
-            <p>Countdowns and Countdown Schedules can either have Foreground Colors, or an animated background</p>
+            <p>Countdowns and countdown schedules can either have Foreground Colors, or an animated background</p>
             <h2>How do Foreground Colors work?</h2>
-            <p>Foreground Colors allow the user to pick 1-8 colors that will cycle through the main foreground element. In Countdowns, that's the clock and progress bar. In Countdown Schedules, the current event header is filled instead of the clock. The Countdown will cycle through the colors you pick. As you're in charge of the colors, make sure you account for contrast and ensure it's readable.</p>
+            <p>Foreground Colors allow the user to pick 1-8 colors that will cycle through the main foreground element. In countdowns, that's the clock and progress bar. In countdown schedules, the current event header is filled instead of the clock. The countdown will cycle through the colors you pick. As you're in charge of the colors, make sure you account for contrast and ensure it's readable.</p>
             <h2>How do Backgrounds work?</h2>
             <p>Backgrounds are premade, animated gradients that flow around the screen. When you enable a Background, it disables the Foreground Colors since the Background fills the entire screen.</p>
         </div>
