--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -80,7 +80,6 @@
             <a title="Import a .minutehand file from another device" onclick="importLinks();"><i class="fa-solid fa-file-import"></i></a>
             <a title="Export as a .minutehand file" id="sharebuttonoptions" onclick="exportLinks();"><i class="fa-solid fa-download"></i></a>
             <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetall();"><i class="fa-solid fa-trash"></i></a>
-            <a title="Sign in with Google" onclick="loginWithGoogle();"><i class="fa-solid fa-right-to-bracket"></i></a>
             <input type="file" id="hiddenFileInput" accept=".minutehand" style="display: none;">
         </div>
 
@@ -103,6 +102,16 @@
 
 
     <script>
+    if (typeof window.supabaseClient !== "undefined" && window.supabaseClient.auth) {
+        window.supabaseClient.auth.getSession().then(({ data: { session } }) => {
+            if (!session?.user) {
+                window.location.href = 'auth';
+            }
+        });
+    }
+
+        
+
 function parameter(name) { //returns the value of the parameter it's sent
     var query = window.location.search.substring(1);
     var parameters = query.split('&');
@@ -1198,22 +1207,6 @@ async function saveDashboardToCloud() {
     } else {
         console.log('[dashboard] Dashboard saved to cloud successfully');
     }
-}
-
-async function loginWithGoogle() {
-  console.log('[dashboard] loginWithGoogle called');
-  const { error } = await supabaseClient.auth.signInWithOAuth({
-    provider: 'google',
-    options: {
-      redirectTo: window.location.origin + window.location.pathname
-    }
-  });
-  if (error) {
-    alert("Login failed: " + error.message);
-    console.error('[dashboard] Login failed:', error.message);
-  } else {
-    console.log('[dashboard] Login with Google initiated');
-  }
 }
     </script>
 </body>
