--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -18,7 +18,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Dashboard</title>
+    <title>Dashboard | Minutehand</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
     <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -30,7 +30,7 @@
     <meta name="apple-mobile-web-app-title" content="Countdown">
 
     <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg" />
-    <meta property="og:title" content="Countdown Dashboard - Michael Dors" />
+    <meta property="og:title" content="Minutehand Dashboard" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://michaeldors.com/mcacountdown/countdowndashboard" />
     <meta property="og:description" content="All of your countdowns in one place." />
