--- a/mcacountdown/auth.html
+++ b/mcacountdown/auth.html
@@ -87,7 +87,7 @@
                 </div>
                 
                 <div class="form-footer">
-                    <p>By continuing, you agree to our <a href="docs#privacypolicy" target="_blank">Privacy Policy</a></p>
+                    <p>By continuing, you agree to our <a href="docs#privacypolicy" target="_blank">Privacy Policy</a> and <a href="docs#termsofuse" target="_blank">Terms of Use</a></p>
                 </div>
             </div>
         </div>
