--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -257,11 +257,11 @@
             <br>
             <div id="dangerzone" style="margin-bottom:85px;">
                 <h1>Danger Zone</h1>
-                <h3 style="font-family: 'Dosis', sans-serif; font-size:23px; text-justify:inter-word;">Resetting Countdown will restore it to a point where no trace of your interaction is left. All locally stored data—including options, your dashboard, and more—will be reset.</h3>
+                <h3 style="font-family: 'Dosis', sans-serif; font-size:23px; text-justify:inter-word;">Deleting your account will remove all Minutehand data and options, both locally and in the cloud. This action is irreversible, and we cannot recover your data. Once you delete your information, it is gone forever.</h3>
                     <div class="dropdown-container" id="resetDropdown">
-                        <a title="Reset all Countdown options and saved data" style="width: initial;" id="reset" class="warning dropdown-button"><i class="fa-solid fa-trash"></i> Reset All</a>
+                        <a title="Delete your account and all Minutehand options and saved data" style="width: initial;" id="reset" class="warning dropdown-button"><i class="fa-solid fa-trash"></i> Delete Account</a>
                         <div class="dropdown-menu" id="resetMenu">
-                          <div class="dropdown-item dropdown-warning" onclick="resetcookies();">
+                          <div class="dropdown-item dropdown-warning" onclick="deletalldata();">
                             <i class="fa-solid fa-circle-exclamation"></i> Confirm
                           </div>
                         </div>
