--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -259,7 +259,7 @@
                 <h1>Danger Zone</h1>
                 <h3 style="font-family: 'Dosis', sans-serif; font-size:23px; text-justify:inter-word;">Deleting your account will remove all Minutehand data and options, both locally and in the cloud. This action is irreversible, and we cannot recover your data. Once you delete your information, it is gone forever.</h3>
                     <div class="dropdown-container" id="resetDropdown">
-                        <a title="Delete your account and all Minutehand options and saved data" style="width: initial;" id="reset" class="warning dropdown-button"><i class="fa-solid fa-trash"></i> Delete Account</a>
+                        <a title="Delete your account and all Minutehand options and saved data" style="width: initial;" id="reset" class="warning dropdown-button"><i class="fa-solid fa-trash"></i> Delete</a>
                         <div class="dropdown-menu" id="resetMenu">
                           <div class="dropdown-item dropdown-warning" onclick="deletalldata();">
                             <i class="fa-solid fa-circle-exclamation"></i> Confirm
