--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -322,7 +322,7 @@
           </div>
           <div class="save-bar visible" id="saveBar">
             <span class="save-text" id="savetext"></span>
-            <a title="Save to Countdown Dashboard" id="savedash" class="savedash" style="margin-top:0px" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
+            <a title="Pin to Countdown Dashboard" id="savedash" class="savedash" style="margin-top:0px" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
         </div>
         <div id="settingsmainpane">
             <center id="mainpanebodycontainer" style="margin-top:100px">
