--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -308,7 +308,7 @@
         <p class="pfp-detail" id="usrdetail">Settings, dashboard, and more</p>
     </div>
         <div class="dropdown-container" style="position:fixed; left:25px; bottom:290px; z-index: 1000001;" id="accountDropdown">
-            <div class="dropdown-menu" id="accountMenu">
+            <div class="dropdown-menu dropup" id="accountMenu">
               <div class="dropdown-item" onclick="openPersonalSettings();">
                 <i class="fa-solid fa-user"></i> Settings
               </div>
