--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -605,7 +605,7 @@
 
             </div>
         </div>
-    <p style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; margin-top:150px;">Countdown is a free service provided by <a class="aintext" style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; text-decoration: underline;" href="https://michaeldors.com/">michaeldors.com</a>.</p>
+    <p style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; margin-top:150px;">Minutehand is a free service provided by <a class="aintext" style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; text-decoration: underline;" href="https://michaeldors.com/">michaeldors.com</a>.</p>
     <p class="textelement" style="max-width:100%;">
         <a class="aintext dependencieslink" style="margin-left:0px" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
         <a class="aintext dependencieslink" href="docs#privacypolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-lock"></i> Policy</a>
