--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -44,7 +44,7 @@
     <script src="supabaseclient.js"></script>
 
     <script src="timekeeper.js" defer></script>
-    <script src="betaapp.js" defer></script>
+    <script src="init.js" defer></script>
     
 </head>
 
