--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -409,7 +409,7 @@
                     <div class="share-pfp"><img src="https://picsum.photos/200" alt=""></div>
                   </div>
                   <div class="share-card-title">Log in to save and share your Countdown</div>
-                  <a class="blackbtn">
+                  <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth">
                     Log in or Sign up
                   </a>
                 </div>
