--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -672,4 +672,16 @@
     <div id="playerContainer"></div>
     <canvas id="profileCanvas" width="200" height="200" style="display: none;"></canvas>
 
+    <!-- Info Pane for non-editor users -->
+    <div class="hidden" id="infoPane">
+        <div id="infosidebar">
+            <a style="position: absolute; left:6%; top:2.7%; font-size: 35px; color:var(--mainforegroundcolor) !important;" class="aintext" title="Close info" onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-circle-left"></i></a>
+            
+            <div style="position: relative;">
+                <h2 style="margin-top: 50px; margin-bottom: 30px; color: var(--mainforegroundcolor);">Information</h2>
+            </div>
+            
+        </div>
+    </div>
+
 </body>
