--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -675,12 +675,30 @@
     <!-- Info Pane for non-editor users -->
     <div class="hidden" id="infoPane">
         <div id="infosidebar">
-            <a style="position: absolute; left:6%; top:2.7%; font-size: 35px; color:var(--mainforegroundcolor) !important;" class="aintext" title="Close info" onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-circle-left"></i></a>
-            
-            <div style="position: relative;">
-                <h2 style="margin-top: 50px; margin-bottom: 30px; color: var(--mainforegroundcolor);">Information</h2>
+            <div class="shareeventcard" style="line-height:1.2;">
+                <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
+                <br>
+                <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;">Created By</p>
+                <h2 id="infocreatorname" style="margin: 2px 0 0 0; line-height:1.2;"></h2>
+                <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">on <span id="infocreationdate"></span></p>
+                <br>
+                <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Clone to make your own changes</p>
+                <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth" style="margin-top: 10px; margin-bottom: 7px;">
+                    <i class="fa-solid fa-clone"></i> Clone This Countdown
+                </a>
             </div>
-            
+
+            <div id="sharingcenter-info">
+                <p>Link</p>
+                <input id="linkinput-info" class="input" style="margin-bottom:10px; margin-left:7px;"/>
+                <button style="background:transparent; border:none; outline:none; cursor:pointer">
+                    <i title="Copy link" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px;" onclick="copyinputtextlinkInfo(); showToast('Shareable link copied', 'success');"></i>
+                </button>
+                <p>QR Code</p>
+                <div id="qrcodecontainerdiv-info" style="border-radius: 20px; margin-bottom:20px; height: 180px; width:fit-content; max-width:75%; margin-top:-10px;">
+                    <div id="qrcode-info" style="float: left; box-shadow: #ffffff 1px 1px 25px; padding-top: 15px; padding-left:20px; transform:scale(1.1)"></div>
+                </div>
+            </div>
         </div>
     </div>
 
