--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -678,7 +678,7 @@
             <div class="shareeventcard" style="line-height:1.2;">
                 <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
                 <br>
-                <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;">Created By</p>
+                <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;">Created by</p>
                 <h2 id="infocreatorname" style="margin: 2px 0 0 0; line-height:1.2;"></h2>
                 <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">on <span id="infocreationdate"></span></p>
                 <br>
