--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -682,10 +682,18 @@
                 <h2 id="infocreatorname" style="margin: 2px 0 0 0; line-height:1.2;"></h2>
                 <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">on <span id="infocreationdate"></span></p>
                 <br>
-                <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Clone to make your own changes</p>
-                <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth" style="margin-top: 10px; margin-bottom: 7px;">
-                    <i class="fa-solid fa-clone"></i> Clone This Countdown
-                </a>
+                <div id="infoclonecd">
+                    <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Clone to make your own changes</p>
+                    <a class="blackbtn" style="margin-top: 10px; margin-bottom: 7px;">
+                        <i class="fa-solid fa-clone"></i> Clone This Countdown
+                    </a>
+                </div>
+                <div id="infosignup">
+                    <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Sign up for free to make your own changes</p>
+                    <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth" style="margin-top: 10px; margin-bottom: 7px;">
+                        <i class="fa-solid fa-right-to-bracket"></i> Sign Up
+                    </a>
+                </div>
             </div>
 
             <div id="sharingcenter-info">
