--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -689,9 +689,9 @@
                     </a>
                 </div>
                 <div id="infosignup">
-                    <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Sign up for free to make your own changes</p>
+                    <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Sign up to make your own changes</p>
                     <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth" style="margin-top: 10px; margin-bottom: 7px;">
-                        <i class="fa-solid fa-right-to-bracket"></i> Sign Up
+                        <i class="fa-solid fa-right-to-bracket"></i> Sign Up for Free
                     </a>
                 </div>
             </div>
